syntax = "proto3";

package rms;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/insolar/assured-ledger/ledger-core/insproto/ins.proto";
import "rms.proto";

option (insproto.notation_all) = true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.equal_all) = true;

message RecordExcerptForCatalogEntry {
    reserved 1 to 15, 17 to 18, 40 to max;

    uint32 RecordType = 16;
    RecordBodyDigests PayloadDigests = 19;

    // MUST match with Excerpt portion of CatalogEntry
    Reference PrevRef = 24;
    Reference RootRef = 25;
    Reference ReasonRef = 26;
    Reference RedirectRef = 27;
    Reference RejoinRef = 28;
}

message RecordBodyForLazy {
    option (insproto.id) = 0;
    RecordBody RecordBody = 19;
}

message CatalogEntry {
    reserved 1 to 15, 29 to 38;
    // bytes padding = 1;

    // Start of fixed-size portion.
    // Use of fixed-size fields allows direct memory mapping for fast access to a few critical fields
    fixed64 DropOrdinal = 16 [(gogoproto.casttype)="DropOrdinal"];
    fixed64 BodyLoc = 17 [(gogoproto.casttype)="StorageLocator"];
    fixed64 PayloadLoc = 18 [(gogoproto.casttype)="StorageLocator"];
    fixed64 BodyPayloadSizes = 19; // low32 - bodySize, high32 - payloadSize
    // End of fixed-size portion.

    uint32 RecordType = 20;
    RecordBodyDigests PayloadDigests = 21;
    ExtLocators ExtensionLoc = 22;

    // Start of Excerpt portion
    // MUST match with RecordExcerpt
    Reference PrevRef = 24;
    Reference RootRef = 25;
    Reference ReasonRef = 26;
    Reference RedirectRef = 27;
    Reference RejoinRef = 28;
    // End of Excerpt field portion

    Binary ProducerSignature = 39;
    Reference RecapRef = 40;

    Reference ProducedBy = 42;
    // Token ProducerToken = 43;
    Binary RegistrarSignature = 44;
    Reference RegisteredBy = 45;
    // Token RegistrarToken = 46;
}

message ExtLocators {
    option (insproto.id) = 0;
    option (insproto.notation) = false; // this type actually satisfies the notation, but check of proto-gen-ins is too restrictive
    repeated ExtLocator Ext = 17;
}

message ExtLocator {
    option (insproto.id) = 0;
    option (insproto.notation) = false; // this type actually satisfies the notation, but check of proto-gen-ins is too restrictive
    uint32 ExtensionID = 17 [(gogoproto.casttype)="ExtensionID"];
    fixed64 PayloadLoc = 18 [(gogoproto.casttype)="StorageLocator"];
    uint32 PayloadSize = 20;
}

message ControlCatalogSummary {
    option (insproto.id) = 0;
    reserved 1 to 19;

    fixed64 RecToFilamentLoc = 20 [(gogoproto.casttype)="StorageLocator"]; // fixed size elements, []Ordinal
    uint32  RecToFilamentSize = 21;

    fixed64 FilamentHeadsLoc = 22 [(gogoproto.casttype)="StorageLocator"]; // fixed size elements, []
    uint32  FilamentHeadsSize = 23;

    fixed64 MerkleLogLoc = 24 [(gogoproto.casttype)="StorageLocator"]; // []Digest
    uint32  MerkleLogSize = 25;
}

message ControlDropSummary {
    option (insproto.id) = 0;
    reserved 1 to 19;

    fixed64 JetLegID = 20; // jet.LegID

    fixed64 DropRecapLoc  = 22 [(gogoproto.casttype)="StorageLocator"];
    uint32  DropRecapSize = 23;

    fixed64 FilamentRecapsLoc = 24 [(gogoproto.casttype)="StorageLocator"]; // []StorageLocator
    uint32  FilamentRecapsSize = 25;

    // Binary MerkleRoot = 26; // inside drop recap

    Reference ProducedBy = 40;
    Binary DropRecapProducerSignature = 41;
}

message FilamentSummary {
    option (insproto.id) = 0;
//    RLineRecap Recap = 19;

    Binary RecapProducerSignature = 39;
}
