syntax = "proto3";

package rms;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/insolar/assured-ledger/ledger-core/insproto/ins.proto";
import "rms.proto";

option (insproto.notation_all) = true;
option (insproto.context_all) = "RecordVisitor";
option (insproto.context_method_all) = "Visit";
option (insproto.message_ctx_apply_all) = "Record";
option (insproto.register_all) = "RegisterRecordType";
option (insproto.message_mapping_all) = true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.equal_all) = true;

message RecordExample {
    option (insproto.id) = 999999999; // for records should be 50-999

    //*** Start of predefined section ***//
    reserved 1 to 15, 17 to 18, 20 to 39, 1792 to max;
    uint32 Polymorph = 16;
    RecordBody RecordBody = 19 [(gogoproto.embed)=true];
    //*** End of predefined section ***//

    // Add custom fields here
    Binary Str = 40;
    Reference Ref1 = 41 [(insproto.ctx_apply)="RecReference"];
    uint32 AsOf = 42 [(gogoproto.casttype)="PulseNumber"];
}

message ROutboundRequest {
    option (insproto.id) = 16;
    // = 17 RLifelineStart
    // = 18 RSidelineStart

    //*** Start of predefined section ***//
    reserved 1 to 15, 17 to 18, 20 to 23, 26 to 39, 1792 to max;
    uint32 Polymorph = 16; // an explicit field is required to be able to alter record type
    RecordBody RecordBody = 19 [(gogoproto.embed)=true];
    //*** End of predefined section ***//

    Reference PrevRef = 24;
    Reference RootRef = 25;

    // Add custom fields here
    string Str = 40;
}

enum LineState {
    Unknown = 0;
    Started = 1;
    Activated = 2;
    BlockedByExpectMemory = 3;
    BlockedByInboundCall = 4;
    // ...
    DirtyDeactivated = 126;
    Deactivated = 127; // 1-byte varint
}

message RLineRecap {
    option (insproto.id) = 19;

    reserved 1 to 23, 26 to 39, 1792 to max;

    Reference PrevRef = 24;
    Reference RootRef = 25;

    LineState LineState = 40;
    Reference BlockedBy = 41;
    Reference DirtyMemory = 42;
    Reference ValidateMemory = 43;
    Reference FinalizedMemory = 44;
}

message RPrevDropReport {
    option (insproto.id) = 0;
}

message RLineActivate {
    option (insproto.id) = 20;
}

message RLineDeactivate {
    option (insproto.id) = 21;
}

message RLineMemory {
    option (insproto.id) = 22;
    // = 23 RLineMemoryInit

    reserved 1 to 15, 17 to 18, 20 to 23, 26 to 39, 1792 to max;
    uint32 Polymorph = 16; // an explicit field is required to be able to alter record type
    RecordBody RecordBody = 19 [(gogoproto.embed)=true];
}

message RLineMemoryReuse {
    option (insproto.id) = 24;
}

message RLineMemoryExpected {
    option (insproto.id) = 25;
}

message RLineInboundRequest {
    option (insproto.id) = 26;
}

message RInboundRequest {
    option (insproto.id) = 27;
}

message RInboundResponse {
    option (insproto.id) = 28;
}

message ROutboundResponse {
    option (insproto.id) = 29;
}
